syntax = "proto3";
package rafay.dev.types.scheduler;

import "google/protobuf/timestamp.proto";
import "gogoproto/gogo.proto";
import "proto/types/commonpb/v3/common.proto";
import "proto/types/config/namespace.proto";
import "proto/types/controller/cluster_controller.proto";

// Enable custom Marshal method.
option (gogoproto.marshaler_all) = true;
// Enable custom Unmarshal method.
option (gogoproto.unmarshaler_all) = true;
// Enable custom Size method (Required by Marshal and Unmarshal).
option (gogoproto.sizer_all) = true;
// Enable registration with golang/protobuf for the grpc-gateway.
option (gogoproto.goproto_registration) = true;
// Enable generation of XXX_MessageName methods for grpc-go/status.
option (gogoproto.messagename_all) = true;

message ClusterNamespaceSpec {
  ClusterNamespaceType type = 1 [
    (gogoproto.moretags) = "pg:\"type,use_zero\"",
    (gogoproto.jsontag) = "type"
  ];
  rafay.dev.types.config.NamespaceTemplate namespace = 2 [
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "pg:\"namespace\""
  ];
  string clusterID = 3 [
    (gogoproto.moretags) = "pg:\"cluster_id\""
  ];
}

enum ClusterNamespaceConditionType {
  // disable enum prefix
  option (gogoproto.goproto_enum_prefix) = false;

  ClusterNamespaceAssigned = 0;
  ClusterNamespaceConverged = 1;
  ClusterNamespaceReady = 2;
  ClusterNamespaceDelete = 3;
}

message ClusterNamespaceCondition {
  ClusterNamespaceConditionType type = 1 [(gogoproto.jsontag) = "type"];
  rafay.dev.types.common.v3.RafayConditionStatus status = 2
      [(gogoproto.jsontag) = "status"];
  google.protobuf.Timestamp lastUpdated = 3
      [(gogoproto.stdtime) = true, (gogoproto.nullable) = false];
  string reason = 4 [(gogoproto.jsontag) = "reason"];
}

message ClusterNamespaceStatus {
  repeated ClusterNamespaceCondition conditions = 1 [
    (gogoproto.nullable) = false,
    (gogoproto.moretags) =
        "patchStrategy:\"merge\" patchMergeKey:\"type\" pg:\"conditions\""
  ];
  rafay.dev.types.controller.NamespaceStatus status = 2
      [(gogoproto.moretags) = "pg:\"status\""];
}

enum ClusterNamespaceType {
  // disable enum prefix
  option (gogoproto.goproto_enum_prefix) = false;

  ClusterNamespaceSystem = 0;
  ClusterNamespaceCustom = 1;
}

message ClusterNamespace {
  string apiVersion = 1;
  string kind = 2;
  rafay.dev.types.common.v3.Metadata metadata = 3;
  ClusterNamespaceSpec spec = 4
      [(gogoproto.nullable) = false, (gogoproto.embed) = true];
  ClusterNamespaceStatus status = 5
      [(gogoproto.nullable) = false, (gogoproto.embed) = true];
}

message ClusterNamespaceList {
  string apiVersion = 1;
  string kind = 2;
  rafay.dev.types.common.v3.ListMetadata metadata = 3;
  repeated ClusterNamespace items = 4;
}